Compileren met of zonder DbXML

--- a/pqbuild1/Makefile
+++ b/pqbuild1/Makefile
@@ -1,3 +1,18 @@
 
+ifeq ($(dbxml), true)
+  DBXML = ok
+  TAGS =
+else ifeq ($(dbxml), false)
+  DBXML = ok
+  TAGS = -tags nodbxml
+else
+  DBXML = fout
+endif
+
+all: check pqbuild1
+
 pqbuild1: *.go
-	LIBRARY_PATH=/net/aps/64/lib go build .
+	LIBRARY_PATH=/net/aps/64/lib go build $(TAGS) .
+
+check:
+	@if [ $(DBXML) != ok ]; then echo "\nGebruik:\n\n  dbxml=true make\n  dbxml=false make\n"; exit 1; fi
