--- a/pqserve1/static/Makefile
+++ b/pqserve1/static/Makefile
@@ -1,8 +1,10 @@
 
+include ../../Makefile.cfg
+
 DEPS = clarinnl.png favicon.ico info.html jquery.js tooltip.css tooltip.js wordrel.css
 
 ../static_data.go: mkstatic $(DEPS)
 	./mkstatic $(DEPS) > $@
 
 mkstatic: mkstatic.go
-	go build $^
+	$(VARS) go build $(OPTS) $^
