--- a/pqserve/Makefile
+++ b/pqserve/Makefile
@@ -1,7 +1,7 @@
 
 include ../Makefile.cfg
 
-ifeq ($(shell go list github.com/pebbe/dbxml), github.com/pebbe/dbxml)
+ifeq ($(shell $(VARS) go list github.com/pebbe/dbxml), github.com/pebbe/dbxml)
  TAGS =
 else
  TAGS = -tags nodbxml
