--- a/pqserve1/static/Makefile
+++ b/pqserve1/static/Makefile
@@ -1,7 +1,16 @@
 
 include ../../Makefile.cfg
 
-DEPS = clarinnl.png favicon.ico info.html jquery.js tooltip.css tooltip.js wordrel.css
+DEPS = \
+	clarinnl.png \
+	favicon.ico \
+	info.html \
+	jquery.js \
+	paqu.css \
+	paqu.png \
+	tooltip.css \
+	tooltip.js \
+
 
 ../static_data.go: mkstatic $(DEPS)
 	./mkstatic $(DEPS) > $@
