--- a/setup-example.toml
+++ b/setup-example.toml
@@ -1,38 +1,128 @@
+##
+## Dit bestand is in toml-formaat, zie: https://github.com/mojombo/toml
+##
+## Dit is de setup voor deze programma's:
+##  - pqbuild
+##  - pqserve
+##  - pqstatus
+##  - rmuser
+##  - setquota
+##
+## Dit bestand word ingelezen als: $PAQU/setup.toml
+##
+## Logs worden opgeslagen als: $PAQU/pqserve.log (automatisch geroteerd)
+## Overige data wordt opgeslagen in de directory: $PAQU/data
+##
+## De default voor $PAQU is: $HOME/.paqu
+##
 
-# Dit bestand is in toml-formaat
-# Zie: https://github.com/mojombo/toml
-
+# De poort waarop `pqserve` draait.
 port = 9876
-url  = "http://paqu.domain.nl:9876/"
 
+# De url waarop de server voor de buitenwereld beschikbaar is.
+url = "http://paqu.domain.nl:9876/"
+
+# Het defaultcorpus. Dit moet een globaal corpus zijn, geïnstalleerd
+# door de beheerder. Dit corpus wordt geselecteerd als de gebruiker
+# zelf nog geen corpus heeft gekozen, en voor de voorbeelden in de
+# uitleg. Dit moet dus een corpus zijn waarin voor alle voorbeelden
+# minstens één resultaat is.
 default = "lassysmall"
 
+# Gegevens die gebruikt worden om mail naar gebruikers te sturen.
+# De waarde van 'smtpserv' is verplicht met een poortnummer.
+# Als 'smtpuser' en 'smtppass' leeg zijn is het een mailserver
+# waarop niet ingelogd hoeft te worden (door degene die `pqserve` draait).
 mailfrom = "maintainer@domain.nl"
 smtpserv = "smtp.domain.nl:25"
 smtpuser = ""
 smtppass = ""
 
-login  = "username:password@/paqu"
+# De login-string waarmee verbinding gemaakt wordt met de MySQL server.
+# In de voorbeelden is 'paqu' de naam van de database van de gebruiker.
+# Voorbeeld met server op een andere machine, met poortnummer:
+# login = "username:password@tcp(www.myserver.nl:3306)/paqu"
+# Voorbeeld met server op lokale machine:
+login = "username:password@/paqu"
+
+# Elke table in MySQL krijgt dit als prefix, gevolgd door een underscore,
+# om conflicten met andere tepassingen in dezelfde database te vermijden.
 prefix = "pq"
 
+# Maximum aantal corpora dat gelijktijdig wordt verwerkt.
+# De verwerking van een corpus gebruikt ongeveer één processor voor 100%.
 maxjob = 10
+
+# Hoeveel data mag een gebruiker uploaden? In aantal tokens, geteld na
+# splitsing van de data in tokens, opgeteld bij data die de gebruiker al
+# heeft staan.
+# Als de waarde 0 is geldt er geen limiet.
+# Deze waarde wordt toegekend aan een gebruiker als ie voor het eerst
+# inlogt. Verandering van deze waarde in de setup heeft dus alleen
+# effect voor nieuwe gebruikers.
+# Deze waarde kan achteraf per gebruiker worden aangepast met het
+# programma `setquota`.
 maxwrd = 1000000
+
+# Maximum geheugen dat door het programma gebruikt mag worden bij het
+# inlezen van een door de gebruiker geüpload bestand. Als het bestand
+# groter is wordt het tijdelijk op schijf bewaard.
+# In bytes.
 maxmem = 54098268160
 
-sh      = "/bin/sh"
-path    = "/local/opt/paqu/pqbuild:/local/opt/paqu/alpino:/bin:/usr/bin"
-alpino  = "/local/opt/Alpino"
+# De shell binary, inclusief path
+sh = "/bin/sh"
+
+# Het path naar alle hulpprogramma's die gebruikt worden door de server,
+# met uitzondering van programma's onder ALPINO_PATH.
+path = "/local/opt/paqu/pqbuild:/local/opt/paqu/alpino:/bin:/usr/bin"
+
+# De root-directory van Alpino (ALPINO_PATH). Ook als er een Alpino-server
+# wordt gebruikt, is dit nodig, omdat de tokenizer van Alpino lokaal
+# gebruikt moet worden.
+alpino = "/local/opt/Alpino"
+
+# Timeout voor Alpino voor de bewerking van één regel. In seconden.
+# Dit heeft geen effect als er een Alpino-server wordt gebruikt.
 timeout = 900
 
+# Een willekeurige tekst die wordt gebruikt voor versleuteling bij het inloggen.
+# VERANDER DIT IN EEN ANDERE TEKST.
+# Als je opnieuw de tekst verandert moet iedere gebruiker opnieuw inloggen.
 secret = "Verander dit in een andere willekeurige tekst"
+
+# Moet het remote ip-adres van de gebruiker mede gebruikt worden bij het inloggen?
+# Dit biedt een extra beveiliging, want al onderschept iemand het cookie waarmee
+# iemand inlogt, kan dit op een andere machine niet gebruikt worden.
+# Nadeel is dat iemand iedere keer als zijn ip-adres verandert opnieuw moet inloggen,
+# bijvoorbeeld op een laptop die steeds van een ander netwerk gebruik maakt.
+# TODO: Klopt die laatste bewerking?
 remote = true
 
+# Hoe lang mag een query via de website bezig zijn voordat een timeout wordt gegeven.
+# In seconden.
+# Als de waarde 0 is wordt er geen timeout gebruikt.
+# Als een gebruiker de pagina voor de query verlaat dan wordt de query ook onderbroken.
 querytimeout = 120
 
+# Prefixen van globale corpora.
+# Een globaal corpus is een corpus dat apart is geïnstalleerd
+# door de beheerder, niet door een gebruiker via de website.
+# De prefixen worden gestript van bestandnamen die worden
+# getoond aan de gebruiker op de pagina met de boomweergave
+# van een zin.
 directories = [
   "/net/corpora/LassySmall/Treebank",
   "/net/corpora/LassyLarge/NLWIKI20110804/DACT"
 ]
+
+# Wie mag de site bekijken?
+# Selectie op basis van ip-adres.
+# Als dit ontbreekt heeft iedereen toegang.
+# Een adres is een ip-adres, een CIDR ip-adresmasker, of het woord "all".
+# Voor CIDR, zie: http://nl.wikipedia.org/wiki/Classless_Inter-Domain_Routing .
+# De EERSTE regel die matcht bepaalt of de bezoeker toegang heeft.
+# Als geen enkele regel matcht heeft de gebruiker toegang.
 
 [[view]]
 allow = true
@@ -42,9 +132,16 @@ addr  = [ "127.0.0.1/8", "123.123.123.123" ]
 allow = false
 addr  = [ "all" ]
 
+# Wie mag een account aanmaken, en dus zelf corpora uploaden?
+# Selectie op basis van e-mailadres.
+# Als dit ontbreekt mag iedereen een account aanmaken.
+# Een mailadres is een reguliere expressie, zonder hoofdletters.
+# De EERSTE regel die matcht bepaalt of de bezoeker toegang heeft.
+# Als geen enkele regel matcht heeft de gebruiker toegang.
+
 [[access]]
 allow = true
-mail  = [ "@xs4all\\.nl$", "@rug\\.nl$" ]  # kleine letters
+mail  = [ "@xs4all\\.nl$", "@rug\\.nl$" ]
 
 [[access]]
 allow = false
