--- a/src/pqbuild/Makefile
+++ b/src/pqbuild/Makefile
@@ -1,11 +1,5 @@
 
 include ../Makefile.cfg
 
-ifeq ($(shell $(VARS) go list github.com/pebbe/dbxml), github.com/pebbe/dbxml)
- TAGS =
-else
- TAGS = -tags nodbxml
-endif
-
 ../../bin/pqbuild: *.go
-	$(VARS) go build -o $@ $(TAGS) $(OPTS) .
+	CGO_LDFLAGS="-Wl,-rpath=$(LIBRARY_PATH)" go build -o $@ $(TAGS) $(OPTS) .
