--- a/setup-example.toml
+++ b/setup-example.toml
@@ -67,11 +67,12 @@ maxjob = 10
 maxwrd = 1000000
 
 # Laat gebruikers corpora downloaden in dact-formaat?
-# Als dit aan staat gebruiken corpora meer dan twee keer zoveel schijfruimte.
+# Als dit aan staat gebruiken corpora ongeveer zeven keer zoveel schijfruimte.
 # Als dit uit staat kunnen gebruikers nog wel corpora in dact-formaat uploaden,
 # maar die corpora worden uitgepakt, en het dact-bestand wordt verwijderd.
 # Het veranderen van deze optie van false naar true heeft alleen effect voor
 # nieuwe corpora.
+# Zonder dact kunnen gebruikers geen XPATH-query's uitvoeren op hun corpora.
 dact = true
 
 # De shell binary, inclusief path
