pqserve: op xpath-pagina ajax vervangen door iframe. Dit is als voorbereiding op incrementele output. Dit werkt niet in IE.

--- a/src/pqserve/static/Makefile
+++ b/src/pqserve/static/Makefile
@@ -7,6 +7,8 @@ DEPS = \
 	favicon.ico \
 	info.html \
 	jquery.js \
+	jquery.browser.js \
+	jquery.iframe-auto-height.js \
 	paqu.css \
 	paqu.png \
 	robots.txt \
