pqserve: uitleg: voorbeelden geordend per soort, met plaatje; correctie van voorbeeld bij 'ld'

--- a/src/pqserve/static/Makefile
+++ b/src/pqserve/static/Makefile
@@ -10,6 +10,9 @@ DEPS = \
 	jquery.textcomplete.js \
 	paqu.css \
 	paqu.png \
+	relhead.png \
+	relnone.png \
+	relother.png \
 	robots.txt \
 	tooltip.css \
 	tooltip.js \
