--- a/setup-example.toml
+++ b/setup-example.toml
@@ -68,6 +68,11 @@ maxjob = 10
 # programma `setquota`.
 maxwrd = 1000000
 
+# Maximum aantal zinnen bij het maken van een nieuw corpus op basis van bestaande corpora.
+# Als de waarde 0 is geldt er geen limiet.
+maxdup = 10000
+
+
 # Laat gebruikers corpora downloaden in dact-formaat?
 # Als dit aan staat gebruiken corpora ongeveer zeven keer zoveel schijfruimte.
 # Als dit uit staat kunnen gebruikers nog wel corpora in dact-formaat uploaden,
