pqserve: xpath: telling metadata

--- a/src/pqbuild/Makefile
+++ b/src/pqbuild/Makefile
@@ -7,6 +7,7 @@ SRC = dbxml_false.go dbxml_true.go ranges.go pqbuild.go
 	CGO_LDFLAGS="-Wl,-rpath=$(LIBRARY_PATH)" go build -o $@ $(TAGS) $(OPTS) .
 
 ranges.go: ../pqserve/ranges.go
+	rm -f ranges.go
 	echo '// GENERATED FILE. DO NOT EDIT.' > ranges.go
 	echo >> ranges.go
 	cat ../pqserve/ranges.go >> ranges.go
