--- a/voorbeelden/pqfolia/config.toml
+++ b/voorbeelden/pqfolia/config.toml
@@ -53,7 +53,7 @@ Tokenized = true
 # DEFINITIES VOOR METADATA
 #
 
-# Voor externe metadata wordt XPath gebruikt
+# Voor externe metadata met <metadata src> wordt de key XPath gebruikt
 
 [Items."Land"]
 Type = "text"
@@ -67,7 +67,7 @@ XPath = "CMD/Components/Session/MDGroup/Actors/Actor[Code='%speaker%']/Age"
 Type = "text"
 XPath = "CMD/Components/Session/MDGroup/Actors/Actor[Code='%speaker%']/Keys/Key[@Name='CGN.firstLang']"
 
-# Voor interne metadata met <foreign-data> wordt XPath2 gebruikt
+# Voor interne metadata met <metadata><foreign-data> wordt de key XPath2 gebruikt
 
 [Items."Uitgever"]
 Type = "text"
@@ -77,7 +77,7 @@ XPath2 = "foreign-data/publisher"
 Type = "text"
 XPath2 = "foreign-data/staff[@id='%speaker%']/role"
 
-# Voor interne metadata met <meta> wordt ID gebruikt
+# Voor native metadata met <metadata><meta> wordt de key ID gebruikt
 
 [Items."Titel"]
 Type = "text"
