omzetting dact naar dactx

--- a/run/setup-example.toml
+++ b/run/setup-example.toml
@@ -92,6 +92,14 @@ maxdup = 10000
 # Zonder dact kunnen gebruikers geen XPATH-query's uitvoeren op hun corpora.
 dact = true
 
+# Geëxpandeerde dact-bestanden gebruiken?
+# Als dit aan staat worden sommige XPATH-query's veel eenvoudiger omdat
+# lege index-nodes worden aangevuld met data uit de corresponderende
+# niet-lege index-nodes.
+# Met deze optie neemt de data op schijf ongeveer twee keer zoveel
+# ruimte in.
+dactx = true
+
 # De shell binary, inclusief path
 sh = "/bin/sh"
 
